add basic explanations of what tech I used

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,16 @@
 <body>
     <section class="task-1">
         <h2>Task 1</h2>
+        <div class="explanation">Technologies used: 
+                <ul>
+                    <li>
+                        Own webpack setup to use Scss
+                    </li>
+                    <li>
+                       Font Awesome for the icons
+                    </li>
+                </ul>
+            </div>
         <div class="task not-started">
             <div class="flex-container">
                 <div class="task-icon">
@@ -93,6 +103,25 @@
     </section>
     <section class="task-2">
         <h2>Task 2</h2>
+        <div class="explanation">Technologies used: 
+            <ul>
+                <li>
+                    Own webpack setup to use ES2016, to build, version, etc.
+                </li>
+                <li>
+                    VueJS to visualize the aggregate array via a template            
+                </li>
+                <li>
+                    Axios Library to make the ajax call
+                </li>
+                <li>
+                    momentjs to turn timestamps into proper dates
+                </li>
+                <li>
+                    json-server npm package to run a basic server that responds with the sample json
+                </li>
+            </ul>
+        </div>
         <div id="app">
             <ul class="news-list">
                 <li v-for="item in pressReleases" class="news">
